ch13중간 오류수정

--- a/ch13/Exercise13/.project
+++ b/ch13/Exercise13/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Excercise13</name>
+	<name>Exercise13</name>
 	<comment></comment>
 	<projects>
 	</projects>
